# optimisation-problems

./: .gitignore  README.md  args_parser.py  optimise_problem_1_extensible.py  optimise_problem_1_simple.py  optimise_problem_2.py  pyproject.toml  run_farmers_problem.py
farmers_problem/: README.md  __init__.py  cbc.py  models.py  optimise.py  optimise_milp.py
problem_1/: README.md  cbc.py  complex.json  models.py  outputs.py  simple.json
problem_2/: outputs.py  probes.py  problem.py  utils.py
